--- a/app/src/main/res/layout/activity_testing.xml
+++ b/app/src/main/res/layout/activity_testing.xml
@@ -11,7 +11,6 @@
         android:layout_width="205dp"
         android:layout_height="86dp"
         android:layout_marginStart="68dp"
-        android:layout_marginTop="88dp"
         android:text="Text here"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,11 +21,13 @@
 
     <ImageView
         android:id="@+id/testImageView"
-        android:layout_width="337dp"
-        android:layout_height="494dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="393dp"
+        android:layout_height="632dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="160dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/testDisplay"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@android:drawable/sym_def_app_icon" />
 </androidx.constraintlayout.widget.ConstraintLayout>
