--- a/app/src/main/res/layout/activity_testing.xml
+++ b/app/src/main/res/layout/activity_testing.xml
@@ -33,9 +33,10 @@
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/testViewPager"
-        android:layout_width="412dp"
-        android:layout_height="461dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="381dp"
+        android:layout_height="460dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/testImageView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
