--- a/app/src/main/res/layout/activity_quick_request.xml
+++ b/app/src/main/res/layout/activity_quick_request.xml
@@ -6,4 +6,23 @@
     android:layout_height="match_parent"
     tools:context="eu.inowen.app.gui.QuickRequestActivity">
 
+    <TextView
+        android:id="@+id/sub_name_textview"
+        android:layout_width="301dp"
+        android:layout_height="44dp"
+        android:text="Subreddit Name"
+        android:textSize="24sp"
+        tools:layout_editor_absoluteX="28dp"
+        tools:layout_editor_absoluteY="32dp" />
+
+    <EditText
+        android:id="@+id/inputSubredditName"
+        android:layout_width="304dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="memes"
+        app:layout_constraintStart_toStartOf="@+id/sub_name_textview"
+        app:layout_constraintTop_toBottomOf="@+id/sub_name_textview" />
 </androidx.constraintlayout.widget.ConstraintLayout>
