--- a/app/src/main/res/layout/activity_quick_request.xml
+++ b/app/src/main/res/layout/activity_quick_request.xml
@@ -7,14 +7,14 @@
     tools:context="eu.inowen.app.gui.QuickRequestActivity"
     android:orientation="vertical"
     android:padding="16dp"
-    android:layout_gravity="top">
+    android:layout_gravity="center">
 
     <TextView
         android:id="@+id/sub_name_textview"
         android:layout_width="301dp"
         android:layout_height="44dp"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:text="@string/subreddit_name"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
         android:id="@+id/inputSubredditName"
         android:layout_width="329dp"
         android:layout_height="51dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="1dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="@string/memes"
@@ -35,7 +35,7 @@
         android:id="@+id/choose_listing_textview"
         android:layout_width="307dp"
         android:layout_height="49dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="15dp"
         android:text="@string/choose_listing"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="@+id/inputSubredditName"
@@ -77,7 +77,7 @@
         android:id="@+id/min_upvotes_textview"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="12dp"
         android:text="@string/minimum_number_of_upvotes"
         android:textSize="24sp" />
 
@@ -100,7 +100,7 @@
         android:id="@+id/quick_request_submit_btn"
         android:layout_width="match_parent"
         android:layout_height="75dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="15dp"
         android:text="@string/submit"
         android:textSize="22sp" />
 
