--- a/app/src/main/res/layout/activity_quick_request.xml
+++ b/app/src/main/res/layout/activity_quick_request.xml
@@ -7,7 +7,7 @@
     tools:context="eu.inowen.app.gui.QuickRequestActivity"
     android:orientation="vertical"
     android:padding="16dp"
-    android:layout_gravity="center">
+    android:layout_gravity="top">
 
     <TextView
         android:id="@+id/sub_name_textview"
